# LLM-Adapters

./: .gitignore  evaluate.py  finetune.py  pyproject.toml
scripts/: eval_math_llama1b_no_sft.sh  train_llama_base.sh
