[tool.black]
line-length = 79

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM-Adapters"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["peft*"]
exclude = ["dataset*"]